chore: clean template; add GasGuard POC + tests

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,22 @@ out/
 broadcast/
 node_modules/
 .DS_Store
+env.sh
+.env
+
+node_modules/
+out/
+cache/
+env.sh
+.env
+
+env.sh
+.env
+node_modules/
+out/
+cache/
+env.sh
+.env
+node_modules/
+out/
+cache/
