--- a/foundry.toml
+++ b/foundry.toml
@@ -1,8 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["node_modules"]
-
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
-[rpc_endpoints]
-mainnet = "https://eth.llamarpc.com"
+libs = ["lib", "node_modules"]
+remappings = [
+  "forge-std/=node_modules/forge-std/src/"
+]
