--- a/drosera.toml
+++ b/drosera.toml
@@ -1,30 +1,17 @@
-ethereum_rpc = "https://ethereum-hoodi-rpc.publicnode.com"
-drosera_rpc = "https://relay.hoodi.drosera.io"
-eth_chain_id = 560048
-drosera_address = "0x91cB447BaFc6e0EA0F4Fe056F5a9b1F14bb06e5D"
+ethereum_rpc = ""
+drosera_rpc = ""
+drosera_address = ""
 
 [traps]
 
-[traps.hello_world]
-path = "out/HelloWorldTrap.sol/HelloWorldTrap.json"
-response_contract = "0x183D78491555cb69B68d2354F7373cc2632508C7"
-response_function = "helloworld(string)"
-cooldown_period_blocks = 33
+[traps.gasprice]
+path = "out/GasGuard.sol/GasGuard.json"
+response_contract = "0x66847043dA36DE12D536054A11F3364E386bb7bc"
+response_function = "setMaxGasWei(uint256)"
+cooldown_period_blocks = 15
 min_number_of_operators = 1
-max_number_of_operators = 2
-block_sample_size = 10
-private_trap = true
+max_number_of_operators = 1
+block_sample_size = 1
+private_trap = false
 whitelist = []
-
-# Uncomment this to deploy the TransferEventTrap
-
-# [traps.transfer_event_trap]
-# path = "out/TransferEventTrap.sol/TransferEventTrap.json"
-# response_contract = "0x183D78491555cb69B68d2354F7373cc2632508C7"
-# response_function = "helloworld(string)"
-# cooldown_period_blocks = 33
-# min_number_of_operators = 1
-# max_number_of_operators = 2
-# block_sample_size = 10
-# private_trap = true
-# whitelist = []
+address = "0x66847043dA36DE12D536054A11F3364E386bb7bc"
